--- a/views/diagnostic.haml
+++ b/views/diagnostic.haml
@@ -2,13 +2,7 @@
 %html
 	%head
 		%title= "Karaoke Diagnostics"
-		= haml :_ios_meta
-		%link{:rel => "stylesheet", :type => "text/css", :href => "/lib/jquery.mobile-1.1.0.css"}
-		%link{:rel => "stylesheet", :type => "text/css", :href => "/css/jquery-custom.css"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery-1.7.2.min.js"}
-		%script{:type => "text/javascript", :src  => "/jquery-ui-1.8.19.custom/js/jquery-ui-1.8.19.custom.min.js"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery.mobile-1.1.0.js"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery.ui.touch-punch.min.js"}
+		= haml :_head
 		:javascript
 			var csrf = "";
 			var list = null;
