--- a/views/file_browser.haml
+++ b/views/file_browser.haml
@@ -2,17 +2,7 @@
 %html
   %head
     %title= "File Browser"
-    = haml :_ios_meta
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/lib/jquery.mobile-1.1.0.css"}
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/jquery-custom.css"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery-1.7.2.min.js"}
-    %script{:type => "text/javascript", :src  => "/jquery-ui-1.8.19.custom/js/jquery-ui-1.8.19.custom.min.js"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery.mobile-1.1.0.js"}
-    %script{:type => "text/javascript",:src  => "/lib/jquery.json-2.3.js"}
-    %script{:type => "text/javascript",:src  => "/lib/reconnecting-websocket.js"}
-    %script{:type => "text/javascript",:src  => "/lib/jquery.websocket-0.0.1.js"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery.ui.touch-punch.min.js"}
-    %script{:type => "text/javascript", :src  => "/scripts/sortableList.js"}    
+    = haml :_head
     :javascript
       $( document ).delegate("#hisaishi-file-list-page", "pageinit", function() {
         var refresh = function() {
