--- a/views/pin_entry.haml
+++ b/views/pin_entry.haml
@@ -2,12 +2,7 @@
 %html
   %head
     %title= "Enter PIN"
-    = haml :_ios_meta
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/lib/jquery.mobile-1.1.0.css"}
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/jquery-custom.css"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery-1.7.2.min.js"}
-    %script{:type => "text/javascript", :src  => "/jquery-ui-1.8.19.custom/js/jquery-ui-1.8.19.custom.min.js"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery.mobile-1.1.0.js"}
+    = haml :_head
     :javascript
       $(document).ready(function(){
         var $pin = $('#pin');
