--- a/views/queue_song.haml
+++ b/views/queue_song.haml
@@ -2,14 +2,7 @@
 %html
 	%head
 		%title= "Karaoke Queue"
-		= haml :_ios_meta
-		%link{:rel => "stylesheet", :type => "text/css", :href => "/lib/jquery.mobile-1.1.0.css"}
-		%link{:rel => "stylesheet", :type => "text/css", :href => "/css/jquery-custom.css"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery-1.7.2.min.js"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery.mobile-1.1.0.js"}
-		%script{:type => "text/javascript",:src  => "/lib/jquery.json-2.3.js"}
-		%script{:type => "text/javascript",:src  => "/lib/reconnecting-websocket.js"}
-		%script{:type => "text/javascript",:src  => "/lib/jquery.websocket-0.0.1.js"}
+		= haml :_head
 	%body{:id => "hisaishi-song-list"}
 		#home{"data-role" => "page", "data-add-back-btn" => "true"}
 			%div{"data-role" => "header"}
