--- a/views/queue_song_fail_limit.haml
+++ b/views/queue_song_fail_limit.haml
@@ -2,11 +2,7 @@
 %html
 	%head
 		%title= "Could not add song to Karaoke Queue"
-		= haml :_ios_meta
-		%link{:rel => "stylesheet", :type => "text/css", :href => "/lib/jquery.mobile-1.1.0.css"}
-		%link{:rel => "stylesheet", :type => "text/css", :href => "/css/jquery-custom.css"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery-1.7.2.min.js"}
-		%script{:type => "text/javascript", :src  => "/lib/jquery.mobile-1.1.0.js"}
+		= haml :_head
 	%body{:id => "hisaishi-song-list"}
 		#home{"data-role" => "page"}
 			%div{"data-role" => "header"}
