--- a/views/search.haml
+++ b/views/search.haml
@@ -2,12 +2,7 @@
 %html
   %head
     %title= "Karaoke Search"
-    = haml :_ios_meta
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/lib/jquery.mobile-1.1.0.css"}
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/jquery-custom.css"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery-1.7.2.min.js"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery.mobile-1.1.0.js"}
-    %script{:type => "text/javascript", :src  => "/lib/jquery.ui.touch-punch.min.js"}
+    = haml :_head
     :javascript
       var csrf = "";
       
