Makes word highlight more readable, removes word transition fading as it makes timing on fast songs tough to follow.

--- a/public/hisaishi-style.css
+++ b/public/hisaishi-style.css
@@ -12,11 +12,11 @@
 }
 
 .word {
-	-webkit-transition: all 0.2s ease-in-out;
+	/*-webkit-transition: all 0.2s ease-in-out;*/
 }
 
 .word-highlight {
-	color: #f00;
+	color: #FF7F50;
 }
 
 .clear {
