--- a/views/announce.haml
+++ b/views/announce.haml
@@ -93,7 +93,7 @@
       });
   %body{:id => "hisaishi-announce-list"}
     #announce-page{"data-role" => "page"}
-      %div{"data-role" => "header"}
+      %div{"data-role" => "header", "data-position" => "fixed"}
         %a{:class => "ui-btn-left", "data-icon" => "gear", :href => "#", :id => "edit-toggle"}= "Edit"
         %h1= "Announcements"
         = haml :_lock_button
