--- a/views/admin_add.haml
+++ b/views/admin_add.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title= "Karaoke Admin: Add Song"
+    %title= "Karaoke Admin: Add song"
     %link{:rel => "stylesheet", :type => "text/css", :href => "/hisaishi-style.css?1"}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/lib/ui/css/ui-darkness/jquery-ui-1.9.2.custom.min.css"}
     %script{:type => "text/javascript",:src  => "/lib/jquery-1.8.3.min.js"}
@@ -10,7 +10,7 @@
   %body{:id => "hisaishi-admin--add"}
     %h1
       %span= "Karaoke Admin: "
-      -if defined?(song)
+      -if defined?(song) && !song.nil?
         %span= "Edit #{song.title}"
       -else
         %span= "Add song"
@@ -71,7 +71,7 @@
       = haml :uploader, :locals => {:song => defined?(song) ? song : nil, :field => {:id => "lyrics_file", :title => "Lyrics"}}
       = haml :uploader, :locals => {:song => defined?(song) ? song : nil, :field => {:id => "image_file", :title => "Image"}}
       %div{:class => "field-wrap"}
-        %input{:type => "submit", :value => "Add song"}
+        %input{:type => "submit", :value => (defined?(song) && !song.nil?) ? "Update song" : "Add song"}
     :javascript
       $(document).ready(function(){
         $('.toggleable').hide();
