--- a/views/admin_add.haml
+++ b/views/admin_add.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title= "Karaoke Admin: Add song"
+    %title= "Karaoke Admin: " + ((defined?(song) && !song.nil?) ? "Edit #{song.title}" : "Add Song")
     %link{:rel => "stylesheet", :type => "text/css", :href => "/hisaishi-style.css?1"}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/lib/ui/css/ui-darkness/jquery-ui-1.9.2.custom.min.css"}
     %script{:type => "text/javascript",:src  => "/lib/jquery-1.8.3.min.js"}
