--- a/views/player.haml
+++ b/views/player.haml
@@ -10,6 +10,7 @@
     %script{:type => "text/javascript",:src  => "/lib/jquery.websocket-0.0.1.js"}
     %script{:type => "text/javascript",:src  => "/mediaelement-and-player.js"}
     %script{:type => "text/javascript",:src  => "/HisaishiEngine.js"}
+    %script{:type => "text/javascript",:src  => "/lib/SoramimiLyrics.js"}
     %script{:type => "text/javascript",:src  => "/scripts/HisaishiSocketHandler.js"}
     %script{:type => "text/javascript",:src  => "/scripts/HisaishiPlayer.js"}
     %script{:type => "text/javascript",:src  => "/scripts/HisaishiAnnouncements.js"}
