Some admin files

--- a/views/player.haml
+++ b/views/player.haml
@@ -9,6 +9,7 @@
     %script{:type => "text/javascript",:src  => "/lib/reconnecting-websocket.js"}
     %script{:type => "text/javascript",:src  => "/lib/jquery.websocket-0.0.1.js"}
     %script{:type => "text/javascript",:src  => "/mediaelement-and-player.js"}
+    %script{:type => "text/javascript",:src  => "/HisaishiUtil.js"}
     %script{:type => "text/javascript",:src  => "/HisaishiEngine.js"}
     %script{:type => "text/javascript",:src  => "/lib/SoramimiLyrics.js"}
     %script{:type => "text/javascript",:src  => "/scripts/HisaishiSocketHandler.js"}
