--- a/views/admin_lyrics.haml
+++ b/views/admin_lyrics.haml
@@ -7,6 +7,9 @@
     %script{:type => "text/javascript",:src  => "/lib/jquery-1.8.3.min.js"}
     %script{:type => "text/javascript",:src  => "/lib/ui/js/jquery-ui-1.9.2.custom.min.js"}
     %script{:type => "text/javascript",:src  => "/lib/filePickerSetup.js"}
+    %script{:type => "text/javascript",:src  => "/lib/HisaishiUtil.js"}
+    %script{:type => "text/javascript",:src  => "/lib/SoramimiLyrics.js"}
+    %script{:type => "text/javascript",:src  => "/lib/SoramimiUI.js"}
   %body{:id => "hisaishi-admin--lyrics"}
     %h1
       %span= "Karaoke Admin: "
